TEST_PROGRAMS/VALID/brendan_gordon/fact.min
var num: int;
var counter: int;

read num;

counter = 1;

while num do
    counter = counter* num;
    num = num-1;
done

print num;

