TEST_PROGRAMS/INVALID/dongkyu_kim/incorrect4.min
# incorrect 4

var 9st: int;

9st = 3;

print 9st;

